Default localisation URL changed